--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ repositories {
 dependencies {
     implementation 'com.google.guava:guava:31.1-jre'
     implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.10'
+    implementation 'io.github.tudo-aqua:z3-turnkey:4.8.14'
     implementation 'org.apache.commons:commons-lang3:3.12.0'
     implementation 'org.jgrapht:jgrapht-core:1.5.1'
     implementation 'org.slf4j:slf4j-api:2.0.5'
